fix: JavaFX 21.0.2 compat, Launcher as mainClass, correct login emails in README